--- a/CSS/JJPT.css
+++ b/CSS/JJPT.css
@@ -127,6 +127,57 @@ p.lrg-body {
     font-size: 18px !important;
 }
 
+.tabpic {
+    display: ;
+    margin: ;
+    position: relative;
+    width: 100%;
+    height: 275px;
+}
+
+.sectorlist tbody td {
+    position:relative;
+}
+
+.sectorlist tbody td a span {
+    display: none;
+    position: absolute;
+    text-align: left;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    font-family: sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 2em;
+    color: #ff6600;
+}
+
+.sectorlist tbody td a:hover span {
+	display: block;
+    width: 100%;
+    height: auto;
+    background-color: #000;
+    opacity: 0.8;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .carousel-caption {
     color: #000;
     font-family: 'TradeGothicLT', 'Open Sans', sans-serif;
