--- a/JJPT.css
+++ b/JJPT.css
@@ -10,6 +10,12 @@ body {
     font-family: 'TradeGothicLT', 'Open Sans', sans-serif;
 }
 
+.jumbotron {
+    background-color: #fff;
+    margin-top: -40px;
+    margin-bottom: -40px;
+}
+
 /* You can change the height of the carousel by changing the height in the class below. It is set to 50% by default, but can be any height! */
 
 .carousel {
@@ -125,6 +131,42 @@ h2 {
 
 p.lrg-body {
     font-size: 18px !important;
+}
+
+.tabpic {
+    display: ;
+    margin: ;
+    position: relative;
+    width: 100%;
+    height: 275px;
+}
+
+.sectorlist tbody td {
+    position:relative;
+}
+
+.sectorlist tbody td a span {
+    display: none;
+    position: absolute;
+    text-align: left;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    font-family: sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 2em;
+    color: #fff;
+}
+
+.sectorlist tbody td a:hover span {
+	display: block;
+    width: 100%;
+    height: auto;
+    background-color: #000;
+    opacity: 0.8;
 }
 
 .carousel-caption {
