--- a/JJPT.css
+++ b/JJPT.css
@@ -189,6 +189,18 @@ p.lrg-body {
     margin: 15px;
 }
 
+@media only screen and (max-width: 768px) {
+    .tab-content {
+    margin-top: 0px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .tab-content {
+    margin-top: 60px;
+    }
+}
+
 footer {
     margin: 50px 0;
 }
