--- a/JJPT.css
+++ b/JJPT.css
@@ -189,6 +189,11 @@ p.lrg-body {
     margin: 15px;
 }
 
+.instapic {
+    margin: 15px;
+    max-height: 175px;
+}
+
 @media only screen and (max-width: 768px) {
     .tab-content {
     margin-top: 0px;
