--- a/JJPT.css
+++ b/JJPT.css
@@ -194,15 +194,21 @@ p.lrg-body {
     max-height: 175px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 0px) {
     .tab-content {
     margin-top: 0px;
     }
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (min-width: 768px) {
     .tab-content {
     margin-top: 60px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .tab-content {
+    margin-top: 0px;
     }
 }
 
