--- a/JJPT.css
+++ b/JJPT.css
@@ -198,6 +198,10 @@ p.lrg-body {
     max-height: 175px;
 }
 
+.btnl {
+    width: 100%;
+}
+
 @media only screen and (min-width: 0px) {
     .tab-content {
     margin-top: 0px;
