--- a/CSS/JJPT.css
+++ b/CSS/JJPT.css
@@ -43,7 +43,7 @@ a.navbar-brand.logo {
 }
 
 @media only screen and (max-width: 767px) {
-    .nav>li>a {
+    .navy>li>a {
     width: 1000px;
     }
 }
