--- a/css/cw.css
+++ b/css/cw.css
@@ -1,6 +1,11 @@
 
 .navbar-header {
-    min-height: 80px;
+    min-height: 60px;
+}
+
+.navbar-custom .navbar-brand {
+    font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 0px 15px;
 }
 
 .navbar-toggle {
@@ -49,4 +54,10 @@
 
 section h3.section-subheading {
     margin-bottom: 25px;
+}
+
+@media screen and (min-width: 1200px) {
+    .timeline {
+        margin-top: 25px;
+    }
 }
