--- a/css/cw.css
+++ b/css/cw.css
@@ -17,6 +17,12 @@
 }
 
 @media (min-width: 768px) {
+    section {
+        padding: 100px 0;
+    }
+}
+
+@media (min-width: 768px) {
     .navbar-custom {
         background-color: transparent;
         padding: 25px 0;
