padding top and bottom of sections

--- a/css/cw.css
+++ b/css/cw.css
@@ -16,9 +16,15 @@
     background-color: #000;
 }
 
+section {
+        padding-top: 50px;
+        padding-bottom: 100px;
+}
+
 @media (min-width: 768px) {
     section {
-        padding: 100px 0;
+        padding-top: 50px;
+        padding-bottom: 100px;
     }
 }
 
