First Client Updates

--- a/assets/css/styles-5.css
+++ b/assets/css/styles-5.css
@@ -1218,5 +1218,5 @@ label {
   background-image: url('../images/frame-red.png');
 }
 .couple-profile {
-  background-image: url('../images/heart-couple-red.png');
+  background-image: url('../images/julialeeheart.jpg');
 }
