--- a/assets/css/styles-5.css
+++ b/assets/css/styles-5.css
@@ -548,7 +548,7 @@ label {
 }
 /* ======= Story Section ======= */
 .story-section {
-  background: #413a38 url('../images/julialeewed.jpg') no-repeat 50% top;
+  background: #fff url('../images/julialeewed.jpg') no-repeat 50% top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
